<resources>
    <string name="app_name">SmartClass</string>
    <string name="in_err">Hãy kiểm tra lại kết nối !</string>
    <string name="open">Open drawer</string>
    <string name="close">Close drawer</string>
    <string name="titleHome">Thiết bị</string>
    <string name="sayTut">Nói \"Ok my phone\"</string>
    <string name="tut_wakeup">Bắt đầu hành động: \"Ok my phone\"</string>
    <string name="tut_open_light">Bật đèn: \"Turn on the light\"</string>
    <string name="tut_turnoff_light">Tắt đèn: \"Turn off the light\"</string>
    <string name="tut_open_fan">Bật quạt: \"Turn on the fan\"</string>
    <string name="tut_turnoff_fan">Tắt quạt: \"Turn off the fan\"</string>
    <string name="tut_cancel">Hủy hành động: \"Cancel\"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
