<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".View.Home.Activity.AboutAppActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_tut"
        app:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Từ khóa giọng nói"
            android:textColor="@android:color/white"
            android:typeface="monospace"
            app:fontFamily="serif" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">


        <TextView
            android:text="*Lưu ý: Để trải nghiệm điều khiển giọng nói tốt hơn, khuyến nghị nên dùng trong môi trường ít tiếng ồn."
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/tut_wakeup"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/tut_open_light"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/tut_open_fan"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/tut_turnoff_light"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/tut_turnoff_fan"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/tut_cancel"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>